# diffCheck

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ScreenCamera_2024-03-28-11-19-34.json  ScreenCamera_2024-03-28-11-53-35.json  ScreenCamera_2024-06-30-00-00-53.json  ScreenCamera_2024-06-30-11-58-46.json  State_of_the_art.md  dev_log.md  environment.mac.yml  environment.windows.yml  environment.yml  log.py  manifest.yml  plotter.py  pyproject.toml  tasks.py  test_save.ply  unnamed.gh
.github/workflows/: build.yml  cpp-build.yml  doc-build.yml  documentation.yml  gh-build.yml  gh_build.yml  publish-build.yml  publish-release.yml  py-sanity-check.yml  pypi-build.yml  test-pass.yml  update-dynamic-logo.yml  win-build.yml  windows-build.yml  yak-build.yml  yakbuild.yml
_build/: .buildinfo  assembly_intro.html  change_log.html  compute_error_intro.html  contribute.html  dev_documentation.html  development_env.html  df_architecture.html  diffCheck.df-b_geometries.html  diffCheck.df_cvt_bindings.html  diffCheck.df_error_estimation.html  diffCheck.df_joint_detector.html  diffCheck.df_transformations.html  diffCheck.df_util.html  diffCheck.df_visualization.html  diffCheck.dfb_registrations.html  diffCheck.dfb_segmentation.html  diffCheck_PythonAPI.html  documentation.html  genindex.html  gh_DFBuildAssembly.html  gh_DFCADSegmentator.html  gh_DFCloudCloudDistance.html  gh_DFCloudMeshDistance.html  gh_DFCloudNormalEstimator.html  gh_DFCloudNormalSegmentator.html  gh_DFCloudSizeDownsample.html  gh_DFCloudUniformDownsample.html  gh_DFCloudVoxelDownsample.html  gh_DFCsvExporter.html  gh_DFDeconstructAssembly.html  gh_DFDeconstructBeam.html  gh_DFFastGlobalRegistration.html  gh_DFICPRegistration.html  gh_DFJointSegmentator.html  gh_DFLoadCloudFromFile.html  gh_DFLoadMeshFromFile.html  gh_DFMeshToCloud.html  gh_DFRANSACGlobalRegistration.html  gh_DFTester.html  (+18 more)
_build/.doctrees/: assembly_intro.doctree  change_log.doctree  compute_error_intro.doctree  contribute.doctree  dev_documentation.doctree  development_env.doctree  df_architecture.doctree  diffCheck.df-b_geometries.doctree  diffCheck.df_cvt_bindings.doctree  diffCheck.df_error_estimation.doctree  diffCheck.df_joint_detector.doctree  diffCheck.df_transformations.doctree  diffCheck.df_util.doctree  diffCheck.df_visualization.doctree  diffCheck.dfb_registrations.doctree  diffCheck.dfb_segmentation.doctree  diffCheck_PythonAPI.doctree  documentation.doctree  gh_DFBuildAssembly.doctree  gh_DFCADSegmentator.doctree  gh_DFCloudCloudDistance.doctree  gh_DFCloudMeshDistance.doctree  gh_DFCloudNormalEstimator.doctree  gh_DFCloudNormalSegmentator.doctree  gh_DFCloudSizeDownsample.doctree  gh_DFCloudUniformDownsample.doctree  gh_DFCloudVoxelDownsample.doctree  gh_DFCsvExporter.doctree  gh_DFDeconstructAssembly.doctree  gh_DFDeconstructBeam.doctree  gh_DFFastGlobalRegistration.doctree  gh_DFICPRegistration.doctree  gh_DFJointSegmentator.doctree  gh_DFLoadCloudFromFile.doctree  gh_DFLoadMeshFromFile.doctree  gh_DFMeshToCloud.doctree  gh_DFRANSACGlobalRegistration.doctree  gh_DFTester.doctree  gh_DFVisualization.doctree  gh_DFVisualizationSettings.doctree  (+12 more)
_build/_sources/: compute_error_intro.md  contribute.md  development_env.md  diffCheck.df_joint_detector.rst  diffCheck.df_visualization.rst  diffCheck.dfb_segmentation.rst  documentation.md  gh_DFCloudUniformDownsample.rst  gh_DFDeconstructBeam.rst  gh_DFFastGlobalRegistration.rst  gh_DFICPRegistration.rst  gh_DFLoadMeshFromFile.rst  gh_DFRANSACGlobalRegistration.rst  gh_DFVisualizationSettings.rst  gh_components.rst  glossary.md  index.rst  key-concepts.md  pre-processing.md  segmentation_intro.md  tutorials.rst
assets/dataset/: mesh_fromRh_unfixedLength.ply
assets/diagram/: rhdfexporter.drawio
assets/icon_pool/: cloud1.xcf  cloud2.xcf  code_xml_export.xcf  code_xml_export2.xcf  df_test_import.xcf  icon.xcf  icon_assemblypreview.xcf  icon_export_ply.xcf  icon_export_serialization.xcf  icon_export_serialization_v2.xcf  icon_fastreg.xcf  icon_import_serialization_v1.xcf  icon_inspect_results.xcf  icon_removebeam.xcf  icon_results.xcf  icon_small_buildassembly.xcf  normal_cloud.xcf  normal_segmenter.xcf
assets/logo/: logo_backblack.xcf  logo_pixelized.xcf  logo_pixelized_64_64.xcf  logo_pixelized_bw.xcf  logo_pixelized_bwg.xcf  logo_pixelized_extracolor.xcf  logomaker.xcf  logomaker_justlogo.xcf  (+2 more)
cmake/: Dockerfile  __noenv__clean.bat  __noenv__clean_config.bat  __noenv__config.bat  activate_conda.bat  activate_conda.sh  build.bat  build_run.bat  clean_config.bat  config.bat  config.sh  external_tools.cmake  install_open3d.bat  options.cmake  tests.cmake
dev_log/: log.md
doc/: assembly-evaluation.md  assembly-evaluation.rst  assembly_intro.md  change_log.md  conf.py  contribute.md  dev_documentation.rst  development_env.md  df_architecture.md  diffCheck.df-b_geometries.rst  diffCheck.df_cvt_bindings.rst  diffCheck.df_error_estimation.rst  diffCheck.df_geometries.rst  diffCheck.df_joint_detector.rst  diffCheck.df_transformations.rst  diffCheck.df_util.rst  diffCheck.df_visualization.rst  diffCheck.dfb_registrations.rst  diffCheck.diffcheck_bindings.rst  diffCheck_PythonAPI.rst  documentation.md  gh_DFBrepToCloud.rst  gh_DFBuildAssembly.rst  gh_DFCADSegmentator.rst  gh_DFCloudCloudDistance.rst  gh_DFCloudMeshDistance.rst  gh_DFCloudNormalEstimator.rst  gh_DFCloudNormalSegmentator.rst  gh_DFCloudSizeDownsample.rst  gh_DFCloudVoxelDownsample.rst  gh_DFColorizeCloud.rst  gh_DFCsvExporter.rst  gh_DFDeconstructAssembly.rst  gh_DFExportCloudToFile.rst  gh_DFExportResults.rst  gh_DFImportResults.rst  gh_DFInspectResults.rst  gh_DFJointSegmentator.rst  gh_DFLoadCloudFromFile.rst  gh_DFMergeAssemblies.rst  (+20 more)
examples/: exporter.ghx
invokes/: flagerize.py  pypireize.py  versionize.py  yakerize.py
portability_experiment/: README.md  subtractive_gh_v1_mac_portability.gh
src/: diffCheck.cc  diffCheck.hh  diffCheckApp.cc  diffCheckBindings.cc  diffcheckpch.cc  diffcheckpch.hh
tests/: entryTest.cc  entry_test.cc
(+324 files in other folders)
